# crewai-bank-heist-game-AIVC

./: README.md  final_game.html  game.html  game_final.html  index.html  integrated_assets.html  integrated_game.html  pyproject.toml  test_report.md
images/: manifest.json
public/: game.html
src/a3_crewai/: crew.py  crew_log.txt  image_download.py  main.py
src/a3_crewai/config/: agents.yaml  gamedesign.yaml  gametemplate.html  tasks.yaml
src/a3_crewai/template/: game_template.html  maps.js
src/a3_crewai/tools/: FreesoundTool.py
