[project]
name = "a3_crewai"
version = "0.1.0"
description = "a3_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
a3_crewai = "a3_crewai.main:run"
run_crew = "a3_crewai.main:run"
train = "a3_crewai.main:train"
replay = "a3_crewai.main:replay"
test = "a3_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
